--- a/src/components/PostCard/postcard.module.scss
+++ b/src/components/PostCard/postcard.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
+  max-width: 500px;
   .postList {
     display: flex;
     flex-direction: column;
