--- a/src/components/PostList/postList.module.scss
+++ b/src/components/PostList/postList.module.scss
@@ -1,3 +1,8 @@
-.postList{
+.postList {
   border: 1px solid black;
+  padding: 5px;
+  border-radius: 8px;
+  border: 1px solid rgb(207, 207, 207);
+  display: flex;
+  justify-content: space-between;
 }
