6 files modified, 1 added

--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -1,10 +1,20 @@
 .button {
-  width: 150px;
-  padding: 5px;
-  border-radius: 8px;
+  width: 100px;
+  padding: 4px;
+  border-radius: 6px;
   outline: none;
   border: none;
-  background-color: #0080ff;
   color: white;
   cursor: pointer;
 }
+
+// .deleteButton {
+//   width: 150px;
+//   padding: 5px;
+//   border-radius: 8px;
+//   outline: none;
+//   border: none;
+//   color: white;
+//   cursor: pointer;
+//   background-color: red;
+// }
